--- a/a.html
+++ b/a.html
@@ -53,7 +53,7 @@
                     Geometri çözebilmek(arada)
                 </li>
                 <li>
-                    Şarkı dinleyerk kitap okuma
+                    Şarkı dinleyerek kitap okuma
                 </li>
             </ol>
         </section>
@@ -74,7 +74,11 @@
             <li>
                 <a href="mailto:bedirbalkan@gmail.com">E-mail</a>
             </li>
-			<li><a href="https://kelrot17.github.io/dnme/">Github</a></li>
+			<li><a href="https://github.com/bedir123/bedir">Github</a></li>
+
+            </li>
+			<li><a href="instagram.com/balibalkan">Instagram</a></li>
+
         </ul>
     </section>
 </footer>
